# FMI

./: .gitignore
Y1-S1/Logica si Deep Learning/: Logica si Deep Learning.aux  Logica si Deep Learning.blg  Logica si Deep Learning.tex  Logics and Deep Learning.aux  Logics and Deep Learning.tex
Y1-S2/lfa/proiect1_lambdanfa/: CMakeLists.txt  main.cpp
Y1-S2/lfa/proiect2_retodfa/: CMakeLists.txt  main.cpp
Y1-S2/lfa/proiect3_cyk/: cyk.py  test.in
Y1-S2/poo/Colocviu/: Luntraru_Chris_135.cpp
Y1-S2/poo/graph generator/: CMakeLists.txt  main.cpp
Y2-S1/gc/lab/: a.out  p1.cpp  p2.cpp  p3.cpp  p4.cpp
Y2-S1/gc/project/: exec  main.cpp  test.in
Y2-S1/ps/lab/: lab10-statistica-descriptiva.R  lab10.R  lab11.R  lab12.r  lab9.R
Y2-S1/ps/project/: README.pages
Y2-S1/so/course/: ch10.key  ch11.key
Y2-S1/tw/exam/: 235_LuntraruChris_v1.html
Y2-S2/bd/tema1-lab/: sub-1.txt
Y2-S2/bd/tema2-lab/: rezolvari.txt
Y2-S2/bd/tema3-lab/: rezolvari.txt
Y2-S2/bd/tema4-lab/: rezolvari.txt
Y2-S2/rc/: lab2.txt
Y3-S1/CGGC/tema1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  tema  tema1
Y3-S1/CGGC/tema1/lib/glad/include/glad/: glad.h
Y3-S1/CGGC/tema1/lib/glad/src/: glad.c
Y3-S1/CGGC/tema1/lib/glfw/: .gitignore
Y3-S1/CGGC/tema1/src/: main.cpp  vertex.glsl
Y3-S1/CGGC/tema1/src/lab1/: lab1.cpp  lab1.h
Y3-S1/CGGC/tema1/src/tema1/: fragment.glsl  tema1.cpp  tema1.h  vertex.glsl
Y3-S1/CGGC/tema1/src/tema2/: fragment.glsl  tema2.cpp  tema2.h  vertex.glsl
Y3-S1/SGBD/: lab2.sql  lab3.sql  lab4.sql  lab5.sql  lab6.sql  run.txt
(+296 files in other folders)
